// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsSidebar render should show an inline error if the prop is provided 1`] = `
<SidebarContent
  className="bcs-Versions"
  data-resin-component="preview"
  data-resin-feature="versions"
  title={
    <React.Fragment>
      <BackButton
        data-resin-target="back"
        to="/activity"
      />
      <FormattedMessage
        defaultMessage="Version History"
        id="be.sidebarVersions.title"
      />
    </React.Fragment>
  }
>
  <LoadingIndicatorWrapper
    className="bcs-Versions-content"
    crawlerPosition="top"
  >
    <InlineError
      title={
        <FormattedMessage
          defaultMessage="Error"
          id="be.error"
        />
      }
    >
      This is an error
    </InlineError>
    <div
      className="bcs-Versions-empty"
    >
      <FormattedMessage
        defaultMessage="No prior versions are available for this file."
        id="be.sidebarVersions.empty"
      />
    </div>
  </LoadingIndicatorWrapper>
</SidebarContent>
`;

exports[`elements/content-sidebar/versions/VersionsSidebar render should show the versions list if no error prop is provided 1`] = `
<SidebarContent
  className="bcs-Versions"
  data-resin-component="preview"
  data-resin-feature="versions"
  title={
    <React.Fragment>
      <BackButton
        data-resin-target="back"
        to="/activity"
      />
      <FormattedMessage
        defaultMessage="Version History"
        id="be.sidebarVersions.title"
      />
    </React.Fragment>
  }
>
  <LoadingIndicatorWrapper
    className="bcs-Versions-content"
    crawlerPosition="top"
  >
    <ul
      className="bcs-Versions-menu"
    >
      <li
        className="bcs-Versions-menu-item"
        key="TODAY"
      >
        <VersionsGroup
          versionGroup="TODAY"
          versions={
            Array [
              Object {
                "created_at": "2019-06-20T20:00:00.000Z",
              },
            ]
          }
        />
      </li>
    </ul>
  </LoadingIndicatorWrapper>
</SidebarContent>
`;
